# backend/openapi/paths/admin.yaml
@@ -58,6 +58,10 @@
     responses:
       '201':
         description: Category created successfully.
+        content:
+          application/json:
+            schema:
+              $ref: '../components/schemas.yaml#/Category'
       '400':
         description: Bad Request (e.g., category name already exists).
       '401':
@@ -65,7 +69,7 @@
       '403':
         description: Forbidden. User is not an admin.
 
-'admin/categories/{id}':
+'admin/categories/{categoryId}':
   put:
     summary: Update a category
     description: (Admin Only) Updates the name or description of a category.
@@ -76,7 +80,7 @@
       - bearerAuth: []
     parameters:
       - in: path
-        name: id
+        name: categoryId
         required: true
         schema:
           type: integer
@@ -85,6 +89,10 @@
     responses:
       '200':
         description: Category updated successfully.
+        content:
+          application/json:
+            schema:
+              $ref: '../components/schemas.yaml#/Category'
       '401':
         description: Unauthorized.
       '403':
@@ -101,7 +109,7 @@
       - bearerAuth: []
     parameters:
       - in: path
-        name: id
+        name: categoryId
         required: true
         schema:
           type: integer
@@ -138,7 +146,7 @@
       '403':
         description: Forbidden. User is not an admin.
 
-'admin/users/{id}':
+'admin/users/{userId}':
   put:
     summary: Update a user's role
     description: (Admin Only) Updates the role of a specific user.
@@ -149,7 +157,7 @@
       - bearerAuth: []
     parameters:
       - in: path
-        name: id
+        name: userId
         required: true
         schema:
           type: integer
@@ -157,6 +165,10 @@
     responses:
       '200':
         description: User role updated successfully.
+        content:
+          application/json:
+            schema:
+              $ref: '../components/schemas.yaml#/User'
       '401':
         description: Unauthorized.
       '403':
@@ -174,7 +186,7 @@
       - bearerAuth: []
     parameters:
       - in: path
-        name: id
+        name: userId
         required: true
         schema:
           type: integer
