# backend/src/modules/admin/admin.routes.js
@@ -9,6 +9,8 @@ import {
   updateCategory,
   deleteCategory,
 } from './admin.controller.js';
+import validate from '../../core/middlewares/validation.middleware.js';
+import adminValidation from './admin.validation.js';
 import { protect, isAdmin } from '../../core/middlewares/authMiddleware.js';
 
 const router = express.Router();
@@ -18,9 +20,15 @@ router.use(protect, isAdmin); // All routes in this file are protected and for a
 router.get('/dashboard', getDashboardMetrics);
 
 router.route('/users').get(getAllUsers);
-router.route('/users/:id').put(updateUserRole).delete(deleteUser);
+router
+  .route('/users/:userId')
+  .put(validate(adminValidation.updateUserRole), updateUserRole)
+  .delete(validate(adminValidation.deleteUser), deleteUser);
 
-router.route('/categories').get(getAllCategories).post(createCategory);
-router.route('/categories/:id').put(updateCategory).delete(deleteCategory);
+router.route('/categories').get(getAllCategories).post(validate(adminValidation.createCategory), createCategory);
+router
+  .route('/categories/:categoryId')
+  .put(validate(adminValidation.updateCategory), updateCategory)
+  .delete(validate(adminValidation.deleteCategory), deleteCategory);
 
 export default router;
